preparation for firebase hosting

--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script src="https://unpkg.com/react-id-swiper@2.3.1/lib/react-id-swiper.js"></script>
-    <script src="https://unpkg.com/react-id-swiper@2.3.1/lib/react-id-swiper.min.js"></script>
-    
+    <script src="/__/firebase/7.2.2/firebase-app.js"></script>
+    <script src="/__/firebase/init.js"></script>
     <div id="root"></div>
   </body>
 </html>
